--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "react-router": "^4.2.0",
     "react-scripts": "1.1.1"
   },
+  "homepage": "https://github.com/whitebird/dropbox-photo-frame",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
