--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-router": "^4.2.0",
     "react-scripts": "1.1.1"
   },
-  "homepage": "https://github.com/whitebird/dropbox-photo-frame",
+  "homepage": "https://sebastiaanjansen.be/dropbox-photo-frame",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
