--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-exif-orientation-img": "^0.1.5",
     "react-router": "^4.2.0",
     "react-scripts": "1.1.1"
   },
