--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dropbox": "^4.0.1",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.2.0",
+    "react-clock": "^2.4.0",
     "react-dom": "^16.2.0",
     "react-exif-orientation-img": "^0.1.5",
     "react-router": "^4.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-ticker": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +23,6 @@
   },
   "devDependencies": {
     "gh-pages": "^1.1.0"
-  }
+  },
+  "homepage": "https://sebastiaanjansen.be/dropbox-photo-frame/"
 }
