--- a/package.json
+++ b/package.json
@@ -25,5 +25,5 @@
   "devDependencies": {
     "gh-pages": "^1.1.0"
   },
-  "homepage": "https://sebastiaanjansen.be/dropbox-photo-frame/"
+  "homepage": "http://localhost:8080"
 }
